--- a/index.html
+++ b/index.html
@@ -1,11 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DP Company</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>PrimeLab Studio</title>
+  <style>
+    body {
+      margin: 0;
+      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
+      background: #f8fafc;
+      color: #1e293b;
+      line-height: 1.6;
+    }
+    header {
+      text-align: center;
+      padding: 4em 1em 2em;
+      background: linear-gradient(135deg, #dbeafe, #f0f4f8);
+    }
+    header img {
+      height: 80px;
+      margin-bottom: 1em;
+      border-radius: 20px;
+    }
+    header h1 {
+      margin: 0;
+      font-size: 2.5rem;
+    }
+    header p {
+      font-size: 1.2rem;
+      opacity: 0.8;
+    }
+    section {
+      max-width: 800px;
+      margin: 2em auto;
+      padding: 0 1em;
+      text-align: center;
+    }
+    a.button {
+      display: inline-block;
+      padding: 0.75em 1.5em;
+      background: #0056d6;
+      color: #fff;
+      text-decoration: none;
+      border-radius: 8px;
+      transition: 0.3s;
+      margin-top: 1em;
+    }
+    a.button:hover {
+      background: #0041a8;
+    }
+  </style>
 </head>
 <body>
-    
+
+<header>
+  <img src="logo.png" alt="PrimeLab Studio Logo">
+  <h1>PrimeLab Studio</h1>
+  <p>We create innovative and user-friendly iOS applications that help people improve their daily life.</p>
+</header>
+
+<section>
+  <h2>Our Work</h2>
+  <p>One of our featured apps is <strong>Inner Pulse</strong> — a personal companion for tracking emotions and improving mental wellness.</p>
+  <a class="button" href="inner-pulse">Learn More About Inner Pulse</a>
+</section>
+
 </body>
 </html>
