--- a/inner-pulse/index.html
+++ b/inner-pulse/index.html
@@ -1,111 +1,127 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Inner Pulse App</title>
-  <style>
-    body {
-      margin: 0;
-      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
-      background: #f8fafc;
-      color: #1e293b;
-      line-height: 1.6;
-    }
-    header {
-      text-align: center;
-      padding: 3em 1em 2em;
-      background: linear-gradient(135deg, #dbeafe, #f0f4f8);
-    }
-    header img {
-      height: 80px;
-      margin-bottom: 1em;
-      border-radius: 20px;
-    }
-    header h1 {
-      margin: 0;
-      font-size: 2.5rem;
-    }
-    header p {
-      font-size: 1.2rem;
-      opacity: 0.8;
-    }
-    section {
-      max-width: 800px;
-      margin: 2em auto;
-      padding: 0 1em;
-    }
-    h2 {
-      color: #0056d6;
-      margin-bottom: 0.5em;
-    }
-    a.button {
-      display: inline-block;
-      padding: 0.75em 1.5em;
-      background: #0056d6;
-      color: #fff;
-      text-decoration: none;
-      border-radius: 8px;
-      transition: 0.3s;
-    }
-    a.button:hover {
-      background: #0041a8;
-    }
-    .footer-links {
-      text-align: center;
-      margin: 3em 0;
-      font-size: 0.9rem;
-    }
-    .footer-links a {
-      color: #0056d6;
-      text-decoration: none;
-      margin: 0 1em;
-    }
-    .footer-links a:hover {
-      text-decoration: underline;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Inner Pulse App</title>
+    <style>
+        body {
+            margin: 0;
+            font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
+            background: #f8fafc;
+            color: #1e293b;
+            line-height: 1.6;
+        }
+
+        header {
+            text-align: center;
+            padding: 3em 1em 2em;
+            background: linear-gradient(135deg, #dbeafe, #f0f4f8);
+        }
+
+        header img {
+            height: 80px;
+            margin-bottom: 1em;
+            border-radius: 20px;
+        }
+
+        header h1 {
+            margin: 0;
+            font-size: 2.5rem;
+        }
+
+        header p {
+            font-size: 1.2rem;
+            opacity: 0.8;
+        }
+
+        section {
+            max-width: 800px;
+            margin: 2em auto;
+            padding: 0 1em;
+        }
+
+        h2 {
+            color: #0056d6;
+            margin-bottom: 0.5em;
+        }
+
+        a.button {
+            display: inline-block;
+            padding: 0.75em 1.5em;
+            background: #0056d6;
+            color: #fff;
+            text-decoration: none;
+            border-radius: 8px;
+            transition: 0.3s;
+        }
+
+        a.button:hover {
+            background: #0041a8;
+        }
+
+        .footer-links {
+            text-align: center;
+            margin: 3em 0;
+            font-size: 0.9rem;
+        }
+
+        .footer-links a {
+            color: #0056d6;
+            text-decoration: none;
+            margin: 0 1em;
+        }
+
+        .footer-links a:hover {
+            text-decoration: underline;
+        }
+    </style>
 </head>
+
 <body>
 
-<header>
-  <img src="logo.png" alt="Inner Pulse Logo">
-  <h1>Inner Pulse</h1>
-  <p>Your personal companion for tracking emotions and self-awareness.</p>
-</header>
+    <header>
+        <img src="logo.png" alt="Inner Pulse Logo">
+        <h1>Inner Pulse</h1>
+        <p>Your personal companion for tracking emotions and self-awareness.</p>
+    </header>
 
-<section>
-  <h2>About the App</h2>
-  <p>Inner Pulse is designed to help you notice and understand your emotions. Track your mood daily, journal your feelings, and discover patterns that help you improve mental wellness.</p>
-</section>
+    <section>
+        <h2>About the App</h2>
+        <p>Inner Pulse is designed to help you notice and understand your emotions. Track your mood daily, journal your
+            feelings, and discover patterns that help you improve mental wellness.</p>
+    </section>
 
-<section>
-  <h2>Features</h2>
-  <ul>
-    <li>Daily mood tracking</li>
-    <li>Journal your emotions</li>
-    <li>Analyze patterns over time</li>
-    <li>Visual stats and charts</li>
-  </ul>
-</section>
+    <section>
+        <h2>Features</h2>
+        <ul>
+            <li>Daily mood tracking</li>
+            <li>Journal your emotions</li>
+            <li>Analyze patterns over time</li>
+            <li>Visual stats and charts</li>
+        </ul>
+    </section>
 
-<section>
-  <h2>Contact Support</h2>
-  <p>If you have questions or feedback, reach out via email:</p>
-  <span id="support-email"></span>
-</section>
+    <section>
+        <h2>Contact Support</h2>
+        <p>If you have questions or feedback, reach out via email:</p>
+        <span id="support-email"></span>
+    </section>
 
-<div class="footer-links">
-  <a href="privacy.html">Privacy Policy</a>
-  <a href="terms.html">Terms & Conditions</a>
-</div>
+    <div class="footer-links">
+        <a href="support.html">Support</a>
+        <a href="privacy.html">Privacy Policy</a>
+        <a href="terms.html">Terms & Conditions</a>
+    </div>
 
-<script>
-  const encodedEmail = "aW5uZXJwdWxzZS5zdXBwb3J0QGljbG91ZC5jb20=";
-  const decodedEmail = atob(encodedEmail);
-  const emailEl = document.getElementById("support-email");
-  emailEl.innerHTML = `<a class="button" href="mailto:${decodedEmail}">${decodedEmail}</a>`;
-</script>
+    <script>
+        const encodedEmail = "aW5uZXJwdWxzZS5zdXBwb3J0QGljbG91ZC5jb20=";
+        const decodedEmail = atob(encodedEmail);
+        const emailEl = document.getElementById("support-email");
+        emailEl.innerHTML = `<a class="button" href="mailto:${decodedEmail}">${decodedEmail}</a>`;
+    </script>
 
 </body>
+
 </html>
